--- a/index.html
+++ b/index.html
@@ -3,33 +3,50 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Profile card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  
 </head>
 <body>
-  Victor Crest
-  26
-  London
+  <img class="upper-pattern" src="/images/bg-pattern-top.svg" alt="just a background pattern">
+  <header>
+    <img src="/images/bg-pattern-card.svg" alt="header bubble background picture" >
+  </header>
+  <main>
+    <img src="/images/image-victor.jpg" alt="Profilepicture of somebody">
 
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <h1>
+    Victor Crest
+    <span class="headline-age">26</span>
+    </h1>
+    <h2>London</h2>
+    <div class="statistics">
+      <div class="statistic-1">
+        <h3>80K</h3>
+        <p>Followers</p>
+      </div>
+      <div class="statistic-2">
+        <h3>803K</h3>
+        <p>Likes</p>
+      </div>
+      <div class="statistic-3">
+        <h3>1.4K</h3>
+        <p>Photos</p>
+      </div>  
+      
+    </div>
+  </main>
+  <img class="bottom-pattern" src="/images/bg-pattern-bottom.svg" alt="just a background pattern">
+  <footer>
+    <p> Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="www.fabian-knitter.de">Fabian Knitter</a>.
+    I´m looking for a Job as a Junior-Frontend-Developer.
+    Feel free to <a href="mailto:fabian@fabian-knitter.de">contact me</a>.</p>
+  </footer>
 </body>
 </html>
