--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
  
   <footer>
     <p> Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="www.fabian-knitter.de">Fabian Knitter</a>.
-    I´m looking for a Job as a Junior-Frontend-Developer.
+    Coded by <a href="https://www.fabian-knitter.de" target="_blank">Fabian Knitter</a>.
+    I´m looking for a Job as a (Junior)-Frontend-Developer.
     Feel free to <a href="mailto:fabian@fabian-knitter.de">contact me</a>.</p>
   </footer>
 </body>
